src/objects/TRAK_Epic__c.object
<CustomObject>
    <description>Business Description: This object is used to store Epics. These are a superset of user stories.

Used In: Release Tracker App</description>
    <fields>
        <fullName>Epic_Details__c</fullName>
        <label>Epic Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Epic_Name__c</fullName>
        <description>Name of the Epic</description>
        <label>Epic Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2. In Progress</fullName>
                </value>
                <value>
                    <fullName>3. Ready for Review</fullName>
                </value>
                <value>
                    <fullName>4. Reviewed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Epic</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Epic_Name__c</columns>
        <columns>Epic_Details__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Epic Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Epics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>